{
    "name": "PlayerInput_Blue",
    "maps": [
        {
            "name": "Movement",
            "id": "c3f6f308-fb29-40ce-a40a-2ca674f8fd4a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "f0383346-72fb-47b7-b56b-957c0cc116f7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "965d73d4-b796-40da-a805-4e99c42fb59e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "782cb4ff-b7ab-4eda-97e3-443a86d1bfbc",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f82e0c87-cb07-47d6-9c08-741822528555",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "691be9ed-ccc3-4003-88da-035131c1a1c6",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "96ed8865-67b7-4cb0-bda6-c4b9c1ab8000",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlaceBomb",
            "id": "35f42d07-16c7-47f4-9f1d-21fbd7dd0171",
            "actions": [
                {
                    "name": "PlaceBomb",
                    "type": "Button",
                    "id": "f2d1870f-7af6-4443-b5d9-118afe7b1fcb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e15202b4-fb24-4b89-9cbb-e506b6b311e6",
                    "path": "<Keyboard>/enter",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceBomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DetonateBomb",
            "id": "90080a5b-83de-4be6-ae81-da3064119cb1",
            "actions": [
                {
                    "name": "DetonateBomb",
                    "type": "Button",
                    "id": "89a77079-0b6d-4b4e-8571-74a1ae3f1936",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "571d6faa-be3f-45e0-860b-90b2592882f4",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DetonateBomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}